Add in the pom.xml to facilitate external builds