@@ -1,2 +1,2 @@
 #!/bin/sh
-java -XX:+UseZGC -XX:+ZGenerational -Xmx2048M -jar dtsa2.jar
+java -Xmx2048M -jar dtsa2.jar
