@@ -1,10 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>gov.nist.microanalysis</groupId>
 	<artifactId>dtsa2</artifactId>
-	<version>1.12.1</version>
+	<version>15.1.13</version>
 	<name>NIST DTSA-II</name>
 	<description>An application for analysis of electron excited X-ray spectra.</description>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
@@ -21,33 +26,25 @@
 				<version>3.6.1</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
-					<source />
-					<target />
+					<source>21</source>
+					<target>21</target>
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.izpack</groupId>
-				<artifactId>izpack-maven-plugin</artifactId>
-				<version>5.1.3</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+				<version>3.4.1</version>
 				<configuration>
-					<excludes>
-						<exclude>**/*.xcf</exclude>
-					</excludes>
-					<addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
-					<useUniqueVersions>true</useUniqueVersions>
 					<archive>
 						<manifest>
 							<!-- Jar file entry point -->
 							<mainClass>gov.nist.microanalysis.dtsa2.DTSA2</mainClass>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 							<addClasspath>true</addClasspath>
 						</manifest>
 						<manifestEntries>
 							<SplashScreen-Image>Splash.png</SplashScreen-Image>
+							<Class-Path>FastQuant-15.1.13.jar semantics-15.1.13.jar</Class-Path> 
+							<Add-Opens>java.base/java.lang java.base/java.util java.desktop/java.awt</Add-Opens>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -56,9 +53,29 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>com.formdev</groupId>
+			<artifactId>flatlaf</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>gov.nist.math</groupId>
+			<artifactId>jama</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<dependency>
 			<groupId>com.toedter</groupId>
 			<artifactId>jcalendar</artifactId>
 			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-forms</artifactId>
+			<version>1.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-common</artifactId>
+			<version>1.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -73,22 +90,12 @@
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
-			<version>1.4.19</version>
+			<version>1.4.21</version>
 		</dependency>
 		<dependency>
-			<groupId>gov.nist.math</groupId>
-			<artifactId>jama</artifactId>
-			<version>1.0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>com.jgoodies</groupId>
-			<artifactId>jgoodies-forms</artifactId>
-			<version>1.8.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.formdev</groupId>
-			<artifactId>flatlaf</artifactId>
-			<version>3.0</version>
+			<groupId>gov.nist.microanalysis</groupId>
+			<artifactId>epq</artifactId>
+			<version>15.1.13</version>
 		</dependency>
 	</dependencies>
 </project>
